Use resource file for string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Resistor</string>
+
+    <string name="image_dimensions">Image size: %1$s x %2$d pixels</string>
 </resources>
